--- a/aula14/package.json
+++ b/aula14/package.json
@@ -12,19 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
     "core-js": "^3.29.0",
     "css-loader": "^6.7.3",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.4",
     "regenerator-runtime": "^0.13.11",
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
+    "nodemon": "^2.0.22",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
